--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="WRITE SOMETHINE HERE" />
+        <meta name="description" content="Sign up to receive exclusive deals, get notified about our sales and much more" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>WRITE SOMETHING HERE</title>
+        <title>Sneaks | Login</title>
     </head>
     <body>
         <div class="wrapper" id="top">
@@ -20,35 +20,35 @@
             <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
-            <nav aria-label="breadcrumb">
+            <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Login</li>
                 </ol>
             </nav>
             <!-- -------SITE HEADER------- -->
-            <section class="container">
+            <section class="container px-3">
                 <h1>Member Login</h1>
             </section>
             <!-- -------LOGIN FORM------- -->
             <section class="container">
                 <div class="message__container"></div>
-                <form class="shadow-sm p-3 mb-5 bg-white rounded login__form">
+                <form class="shadow-sm p-3 mb-5 bg-white rounded login__form bg-white rounded-0 mt-3 p-3">
                     <div class="message__container"></div>
-                    <div class="form-group">
+                    <div class="form-group my-3">
                         <label for="username">Your username</label>
-                        <input id="username" class="form-control" placeholder="Username">
+                        <input id="username" class="form-control mt-1" placeholder="Username">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group mb-3">
                         <label for="exampleInputPassword1">Your password*</label>
-                        <input type="password" id="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" id="password" class="form-control mt-1" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                    <a href="#" class="forgot__Password d-block">Forgot your password?</a>
+                    <button type="submit" class="btn btn-primary mt-2">Login</button>
+                    <a href="#" class="forgot__Password d-block my-3 form__small__text">Forgot your password?</a>
                 </form>
             </section>
             <!-- -------CREATE ACCOUNT------- -->
-            <section class="container">
+            <section class="container p-3">
                 <h2>Create Account</h2>
                 <p>By creating an account you will get the benefits of a quicker 
                     checkout with already saved details. You can track you orders 
@@ -57,54 +57,54 @@
                 <button type="submit" class="btn btn-primary">Create Account</button>
             </section>
             <!-- -------TO TOP------- -->
-            <section class="container">
+            <section class="container my-4 totop p-0">
                 <a href="#top">To the top
                     <i class="fas fa-arrow-up"></i>
                 </a>
             </section>
         </div>
         <!-- -------FOOTER------- -->
-        <footer class="container footer">
+        <footer class="container-fluid px-3 pt-4">
             <div class="row justify-content-between">
-                <div>
+                <div class="col-md footer__block my-4 w-75">
                     <h4 class="footer__heading">Sign up for our newsletter</h4>
                     <form>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+                                <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
                     </form>
                 </div>
-                <div class="col-md">
+                <div class="col-md footer__block my-4">
                     <h4 class="footer__heading">Follow Us</h4>
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f fa-2x p-0"></i>
+                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </div>
-                <div class="list-group col-md">
-                    <h4 class="footer__heading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action">Contact us</a>
-                    <a href="#" class="list-group-item list-group-item-action">FAQ</a>
-                    <a href="#" class="list-group-item list-group-item-action">Shipping</a>
-                    <a href="#" class="list-group-item list-group-item-action">Returns</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Customer Service</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
                 </div>
-                <div class="list-group col-md">
-                    <h4 class="footer__eading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action">About us</a>
-                    <a href="#" class="list-group-item list-group-item-action">Our stores</a>
-                    <a href="login.html" class="list-group-item list-group-item-action">Login</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Sneaks</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
+                    <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                 </div>
             </div>
-            <div class="row justify-content-between mb-1"> 
-                <div class=" col-md footer__policies footer__block">
-                    <div class="col">
-                        <a href="#">Terms and Conditions</a> 
-                    </div>
-                    <div class="col">
-                        <a href="#">Privacy Policy</a>
-                    </div>
+            <div class="d-flex justify-content-center mb-1"> 
+                <div class=" px-2">
+                    <a href="#">Terms & Conditions</a> 
+                </div>
+                <div class=" px-2">
+                    <p>|</p> 
+                </div>
+                <div class="px-2">
+                    <a href="#">Privacy Policy</a>
                 </div>
             </div>
         </footer>
