--- a/cart.html
+++ b/cart.html
@@ -9,38 +9,37 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="WRITE SOMETHINE HERE" />
+        <meta name="description" content="See your cart details at Sneaks" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>WRITE SOMETHING HERE</title>
+        <title>Sneaks | Cart</title>
     </head>
     <body>
         <div class="wrapper">
             <!-- -------NAVBAR------- -->
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3 bg-white">
             </nav>
             <!-- -------BREADCRUMB------- -->
-            <nav aria-label="breadcrumb">
+            <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Cart</li>
                 </ol>
             </nav>
             <!-- -------CART HEADER------- -->
-            <section class="container">
+            <section class="container px-3 my-4">
                 <h1>Your Shopping Cart (AMOUNT IN CART)</h1>
-                <div>
-                    <i class="fas fa-chevron-left"></i>
-                    <p>Continue Shopping</p>
+                <div class="d-flex align-items-center w-100">
+                    <a href="/products.html"><p class="m-0 cart__back__link pb-1"> < Continue Shopping</p></a>
                 </div>
             </section>
             <!-- -------ITEMS IN CART------- -->
-            <section class="container">
-                <div class="card mb-3 justify-content-between" style="max-width: 540px;">
+            <section class="container px-3">
+                <div class="card mb-3 justify-content-between mb-4" style="max-width: 540px;">
                     <div class="message__container"></div>
                     <div class="row no-gutters">
                         <div class="col-xs-4">
-                            <a href="#"><img src="./test-images/pexels-ox-street-6540973.jpg" class="card-img cart__product__image" alt="..."></a>
+                            <a href="#"><img src="" class="card-img cart__product__image" alt="..."></a>
                         </div>
                         <div class="col-xs-8">
                             <div class="card-body">
@@ -61,25 +60,23 @@
                 <hr/>
             </section>
             <!-- -------SUMMARY------- -->
-            <section class="container">
-                <h3>Order Summary</h3>
-                <h4>You order:</h4>
-                <div class="table-responsive table-borderless table-sm">
-                    <!-- <caption class="sr-only">Subtotal</caption> -->
+            <section class="container px-3">
+                <h2>Order Summary</h2>
+                <p>You order:</p>
+                <div class="table-responsive table-sm">
                     <table class="table">
                         <tr>
                             <td>Subtotal:</td>
-                            <td>Shipping</td>
+                            <td>ORDER AMOUNT</td>
                         </tr>
                         <tr>
-                            <td>Amount</td>
+                            <td>Shipping:</td>
                             <td>Free Shipping</td>
                         </tr>
                     </table>
                 </div>
                 <hr/>
-                <div class="table-responsive table-borderless table-sm">
-                    <!-- <caption class="sr-only">Subtotal</caption> -->
+                <div class="table-responsive table-sm">
                     <table class="table">
                         <tr>
                             <td>Total:</td>
@@ -90,54 +87,54 @@
                 <a href="#" class="btn btn-primary">To Checkout</a>
             </section>
             <!-- -------TO TOP------- -->
-            <section class="container">
+            <section class="container my-4 totop p-0">
                 <a href="#top">To the top
                     <i class="fas fa-arrow-up"></i>
                 </a>
             </section>
         </div>
         <!-- -------FOOTER------- -->
-        <footer class="container footer">
+        <footer class="container-fluid px-3 pt-4" class="px-3">
             <div class="row justify-content-between">
-                <div>
+                <div class="col-md footer__block my-4 w-75">
                     <h4 class="footer__heading">Sign up for our newsletter</h4>
                     <form>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+                                <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
                     </form>
                 </div>
-                <div class="col-md">
+                <div class="col-md footer__block my-4">
                     <h4 class="footer__heading">Follow Us</h4>
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f fa-2x p-0"></i>
+                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </div>
-                <div class="list-group col-md">
-                    <h4 class="footer__heading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action">Contact us</a>
-                    <a href="#" class="list-group-item list-group-item-action">FAQ</a>
-                    <a href="#" class="list-group-item list-group-item-action">Shipping</a>
-                    <a href="#" class="list-group-item list-group-item-action">Returns</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Customer Service</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
                 </div>
-                <div class="list-group col-md">
-                    <h4 class="footer__eading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action">About us</a>
-                    <a href="#" class="list-group-item list-group-item-action">Our stores</a>
-                    <a href="login.html" class="list-group-item list-group-item-action">Login</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Sneaks</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
+                    <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                 </div>
             </div>
-            <div class="row justify-content-between mb-1"> 
-                <div class=" col-md footer__policies footer__block">
-                    <div class="col">
-                        <a href="#">Terms and Conditions</a> 
-                    </div>
-                    <div class="col">
-                        <a href="#">Privacy Policy</a>
-                    </div>
+            <div class="d-flex justify-content-center mb-1"> 
+                <div class=" px-2">
+                    <a href="#">Terms & Conditions</a> 
+                </div>
+                <div class=" px-2">
+                    <p>|</p> 
+                </div>
+                <div class="px-2">
+                    <a href="#">Privacy Policy</a>
                 </div>
             </div>
         </footer>
