--- a/index.html
+++ b/index.html
@@ -9,33 +9,39 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="WRITE SOMETHINE HERE" />
+        <meta name="description" content="Sneaks is your premium source for exclusive sneakers from the best fashion brands." />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>WRITE SOMETHING HERE</title>
+        <title>Sneaks | Homepage</title>
     </head>
     <body>
         <div class="wrapper" id="top">
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3 bg-white">
             </nav>
             <!-- -------BREADCRUMB------- -->
-
-            <nav class="container" aria-label="breadcrumb">
+            <nav class="container breadcrumb px-3" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                 <li class="breadcrumb-item active" aria-current="page"><a href="index.html">Home</a></li>
                 </ol>
             </nav>
             <!-- -------HERO-IMAGE------- -->
-            <section class="mt-4 p-5 bg-primary hero__container" id="hero__image">
+            <section class="mt-4 p-5 bg-primary hero__container mb-5 mt-0" id="hero__image">
                 <div class="message__container"></div>
             </section>
+            <!-- -------FEATURED HEADER------- -->
+            <section class="container px-4 my-3">
+                <h1>Featured Products</h1>
+            </section>
             <!-- -------CARD------- -->
-            <section class="container">
-                <div class="row justify-content-between home__featured">
-                    <div class="message__container"></div>
+            <section class="container px-3 card__block">
+                <div class="message__container"></div>
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <div class="row justify-content-between home__featured rounded-0"></div>
             </section>
             <!-- -------TO TOP------- -->
-            <section class="container mb-4 totop p-0">
+            <section class="container my-4 totop p-0">
                 <div class="row">
                     <a href="#top">To the top
                         <i class="fas fa-arrow-up"></i>
@@ -44,47 +50,47 @@
             </section>
         </div>
             <!-- -------FOOTER------- -->
-        <footer class="container-fluid p-4 footer">
+        <footer class="container-fluid px-3 pt-4">
             <div class="row justify-content-between">
-                <div class="col-md footer__block mb-5">
+                <div class="col-md footer__block my-4 w-75">
                     <h4 class="footer__heading">Sign up for our newsletter</h4>
                     <form>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+                                <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary mt-2">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
                     </form>
                 </div>
-                <div class="col-md footer__block mb-5">
+                <div class="col-md footer__block my-4">
                     <h4 class="footer__heading">Follow Us</h4>
-                    <i class="fab fa-facebook-f fa-lg mr-4"></i>
-                    <i class="fab fa-instagram fa-lg"></i>
-                    <i class="fab fa-twitter fa-lg"></i>
+                    <i class="fab fa-facebook-f fa-2x p-0"></i>
+                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </div>
-                <div class="list-group col-md footer__block mb-4">
-                    <h4 class="footer__heading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Customer Service</h4>
                     <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
                     <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
                     <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
                 </div>
-                <div class="list-group col-md footer__block mb-4">
-                    <h4 class="footer__eading">Title</h4>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Sneaks</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
                     <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
                     <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
                     <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                 </div>
             </div>
-            <div class="row justify-content-between mb-1"> 
-                <div class=" col-md footer__policies footer__block">
-                    <div class="col">
-                        <a href="#">Terms and Conditions</a> 
-                    </div>
-                    <div class="col">
-                        <a href="#">Privacy Policy</a>
-                    </div>
+            <div class="d-flex justify-content-center mb-1"> 
+                <div class=" px-2">
+                    <a href="#">Terms & Conditions</a> 
+                </div>
+                <div class=" px-2">
+                    <p>|</p> 
+                </div>
+                <div class="px-2">
+                    <a href="#">Privacy Policy</a>
                 </div>
             </div>
         </footer>
