--- a/products.html
+++ b/products.html
@@ -9,90 +9,94 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="WRITE SOMETHINE HERE" />
+        <meta name="description" content="Get inspired by the newest trends, and shop our exclusive sneakers collection!" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>WRITE SOMETHING HERE</title>
+        <title>Sneaks | Products</title>
     </head>
     <body>
         <div class="wrapper" id="top">
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3 bg-white">
             </nav>
             <!-- -------BREADCRUMB------- -->
-            <nav aria-label="breadcrumb">
+            <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Products</li>
                 </ol>
             </nav>
             <!-- -------PRODUCT HEADER------- -->
-            <section class="container">
+            <section class="container px-3">
                 <h1>Products</h1>
             </section>
             <!-- -------SEARCH PRODUCT------- -->
-            <section class="container">
-                <form class="search__form form-inline my-2 my-lg-0 d-flex">
-                    <input class="form-control mr-sm-2 w-50" type="search" placeholder="Search products" aria-label="Search">
-                    <button class=" btn btn-outline-success my-2 my-sm-0" type="submit">Search
+            <section class="container px-3 my-4">
+                <form class="search__form form-inline my-2 my-lg-0 d-flex align-items-start">
+                    <input class="form-control mr-sm-2 w-50 search__input" type="search" placeholder="Search products" aria-label="Search">
+                    <button class=" btn btn-outline-success my-2 my-sm-0 search__btn" type="submit">
+                        Search
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
             </section>
             <!-- CARD -->
-            <section class="container">
+            <section class="container px-3 card__block">
+                <div class="message__container"></div>
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
                 <div class="row justify-content-between products__container">
-                    <div class="message__container"></div>
                 </div>
             </section>
             <!-- -------TO TOP------- -->
-            <section class="container">
+            <section class="container mb-4 totop p-0">
                 <a href="#top">To the top
                     <i class="fas fa-arrow-up"></i>
                 </a>
             </section>
         </div>
         <!-- -------FOOTER------- -->
-        <footer class="container footer">
+        <footer class="container-fluid px-3 pt-4">
             <div class="row justify-content-between">
-                <div>
+                <div class="col-md footer__block my-4 w-75">
                     <h4 class="footer__heading">Sign up for our newsletter</h4>
                     <form>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+                                <input type="email" class="form-control mb-2 newsletter__input" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2 mt-3">Submit</button>
                     </form>
                 </div>
-                <div class="col-md">
+                <div class="col-md footer__block my-4">
                     <h4 class="footer__heading">Follow Us</h4>
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f fa-2x p-0"></i>
+                    <i class="fab fa-instagram fa-2x"></i>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </div>
-                <div class="list-group col-md">
-                    <h4 class="footer__heading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action">Contact us</a>
-                    <a href="#" class="list-group-item list-group-item-action">FAQ</a>
-                    <a href="#" class="list-group-item list-group-item-action">Shipping</a>
-                    <a href="#" class="list-group-item list-group-item-action">Returns</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Customer Service</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">FAQ</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Shipping</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Returns</a>
                 </div>
-                <div class="list-group col-md">
-                    <h4 class="footer__eading">Title</h4>
-                    <a href="#" class="list-group-item list-group-item-action">About us</a>
-                    <a href="#" class="list-group-item list-group-item-action">Our stores</a>
-                    <a href="login.html" class="list-group-item list-group-item-action">Login</a>
+                <div class="list-group col-md footer__block my-4">
+                    <h4 class="mx-3">Sneaks</h4>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Contact us</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">About us</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-transparent border-0">Our stores</a>
+                    <a href="login.html" class="list-group-item list-group-item-action bg-transparent border-0">Login</a>
                 </div>
             </div>
-            <div class="row justify-content-between mb-1"> 
-                <div class=" col-md footer__policies footer__block">
-                    <div class="col">
-                        <a href="#">Terms and Conditions</a> 
-                    </div>
-                    <div class="col">
-                        <a href="#">Privacy Policy</a>
-                    </div>
+            <div class="d-flex justify-content-center mb-1"> 
+                <div class=" px-2">
+                    <a href="#">Terms & Conditions</a> 
+                </div>
+                <div class=" px-2">
+                    <p>|</p> 
+                </div>
+                <div class="px-2">
+                    <a href="#">Privacy Policy</a>
                 </div>
             </div>
         </footer>
