--- a/cart.html
+++ b/cart.html
@@ -35,8 +35,9 @@
             </section>
             <!-- -------ITEMS IN CART------- -->
             <section class="container px-3">
-                <div class="card mb-3 justify-content-between mb-4" style="max-width: 540px;">
-                    <div class="message__container"></div>
+                <div class="message__container"></div>
+                <div class="loading"></div>
+                <div class="card mb-3 justify-content-between mb-4 cart__container" style="max-width: 540px;">
                     <div class="row no-gutters">
                         <div class="col-xs-4">
                             <a href="#"><img src="" class="card-img cart__product__image" alt="..."></a>
