--- a/addproduct.html
+++ b/addproduct.html
@@ -23,7 +23,7 @@
             <nav aria-label="breadcrumb" class="px-3">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="profilepage.html">Profile page</a></li>
+                    <li class="breadcrumb-item"><a href="profilepage.html">Admin page</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Add product</li>
                 </ol>
             </nav>
@@ -33,8 +33,9 @@
             </section>
             <!-- -------ADD  FORM------- -->
             <section class="container mb-5">
-                <div class="message__container"></div>
+                <div class="loading"></div>
                 <form class="add__form shadow-sm bg-white rounded-0 mt-3 p-3">
+                    <div class="message__container"></div>
                     <div class="form-group my-3">
                         <label for="productname">Product name</label>
                         <input type="name" class="form-control mt-1" id="productname" aria-describedby="editProductName" placeholder="Name">
@@ -54,12 +55,9 @@
                             <option value="no">No</option>
                         </select>
                     </div>
-                    <div class="my-3">
-                        <label class="mb-2">Add image</label>
-                        <div class="input-group mb-3">
-                            <input type="file" class="form-control upload__image" id="inputGroupFile02">
-                            <label class="input-group-text upload__image form__small__text" for="inputGroupFile02">Upload</label>
-                        </div>
+                    <div class="form-group my-3">
+                        <label for="productprice">Add Image URL</label>
+                        <input type="url" class="form-control mt-1" id="addImage" aria-describedby="editProductName" placeholder="Image URL">
                     </div>
                     <input id="id" type="hidden" />
                     <button type="submit" class="btn btn-primary my-3">Add product</button>
