--- a/editproduct.html
+++ b/editproduct.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +22,7 @@
             <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="profilepage.html">Profile page</a></li>
+                    <li class="breadcrumb-item"><a href="profilepage.html">Admin page</a></li>
                     <li class="breadcrumb-item"><a href="listofproducts.html">Products</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Edit product</li>
                 </ol>
@@ -34,7 +33,8 @@
             </section>
             <!-- -------ADD  FORM------- -->
             <section class="container mb-5">
-                <form class="edit__form shadow-sm bg-white rounded-0 mt-3 p-3">
+                <div class="loading"></div>
+                <form class="edit__form  shadow-sm bg-white rounded-0 mt-3 p-3">
                     <div class="message__container"></div>
                     <div class="form-group my-3">
                         <label for="productname">Product name</label>
@@ -55,15 +55,13 @@
                             <option value="no">No</option>
                         </select>
                     </div>
-                    <div class="my-3">
-                        <label class="mb-2">Add image</label>
-                        <div class="input-group mb-3">
-                            <input type="file" class="form-control upload__image" id="inputGroupFile02">
-                            <label class="input-group-text upload__image form__small__text" for="inputGroupFile02">Upload</label>
-                        </div>
+                    <div class="form-group my-3">
+                        <label for="productprice">Add Image URL</label>
+                        <input type="url" class="form-control mt-1" id="addImage" aria-describedby="editProductName" placeholder="Image URL">
                     </div>
+                    <input id="id" type="hidden" />
                     <button type="submit" class="btn btn-primary my-3">Save edit</button>
-                    <button type="submit" class="btn btn-primary delete__button my-3">Delete product <i class="fas fa-trash-alt"></i></button>
+                    <div class="delete__container container"></div>
                 </form>
             </section>
             <!-- -------TO TOP------- -->
