--- a/addproduct.html
+++ b/addproduct.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,10 +16,10 @@
     <body>
         <div class="wrapper" id="top">
             <!-- -------NAVBAR------- -->
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
-            <nav aria-label="breadcrumb" class="px-3">
+            <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="profilepage.html">Admin page</a></li>
@@ -33,7 +32,6 @@
             </section>
             <!-- -------ADD  FORM------- -->
             <section class="container mb-5">
-                <div class="loading"></div>
                 <form class="add__form shadow-sm bg-white rounded-0 mt-3 p-3">
                     <div class="message__container"></div>
                     <div class="form-group my-3">
