--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +16,7 @@
     <body>
         <div class="wrapper">
             <!-- -------NAVBAR------- -->
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3 bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
             <nav aria-label="breadcrumb" class="px-3 pt-2">
@@ -36,9 +35,10 @@
             <!-- -------ITEMS IN CART------- -->
             <section class="container px-3">
                 <div class="message__container"></div>
-                <div class="loading"></div>
-                <div class="card mb-3 justify-content-between mb-4 cart__container" style="max-width: 540px;">
+                <div class="card mb-3 justify-content-between mb-4 cart__container" 
+                style="max-width: 540px;">
                     <div class="row no-gutters">
+                        <div class="loading"></div>
                         <div class="col-xs-4">
                             <a href="#"><img src="" class="card-img cart__product__image" alt="..."></a>
                         </div>
