--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,13 +16,13 @@
     <body>
         <div class="wrapper" id="top">
             <!-- -------NAVBAR------- -->
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
             <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Login</li>
+                    <li class="breadcrumb-item active" aria-current="page">Admin login</li>
                 </ol>
             </nav>
             <!-- -------SITE HEADER------- -->
@@ -32,8 +31,8 @@
             </section>
             <!-- -------LOGIN FORM------- -->
             <section class="container">
-                <div class="message__container"></div>
                 <form class="shadow-sm p-3 mb-5 bg-white rounded login__form bg-white rounded-0 mt-3 p-3">
+                    <div class="message__container"></div>
                     <div class="message__container"></div>
                     <div class="form-group my-3">
                         <label for="username">Your username</label>
@@ -43,11 +42,11 @@
                         <label for="exampleInputPassword1">Your password*</label>
                         <input type="password" id="password" class="form-control mt-1" id="exampleInputPassword1" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-primary mt-2">Login</button>
+                    <button type="submit" class="btn btn-primary mt-2">Admin login</button>
                     <a href="#" class="forgot__Password d-block my-3 form__small__text">Forgot your password?</a>
                 </form>
             </section>
-            <!-- -------CREATE ACCOUNT------- -->
+            <!-- -------CREATE ACCOUNT-------
             <section class="container p-3">
                 <h2>Create Account</h2>
                 <p>By creating an account you will get the benefits of a quicker 
@@ -55,7 +54,7 @@
                     more easily, view your order history and much more.
                 </p>
                 <button type="submit" class="btn btn-primary">Create Account</button>
-            </section>
+            </section> -->
             <!-- -------TO TOP------- -->
             <section class="container my-4 totop p-0">
                 <a href="#top">To the top
