--- a/product-page.html
+++ b/product-page.html
@@ -4,20 +4,19 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="WRITE SOMETHINE HERE" />
+        <meta name="description" content="See our product" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>WRITE SOMETHING HERE</title>
+        <title>Sneaks | Product page</title>
     </head>
     <body>
         <div class="wrapper" id="top">
             <!-- -------NAVBAR------- -->
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3 bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
             <nav aria-label="breadcrumb" class="px-3 pt-2">
@@ -32,11 +31,9 @@
             <!-- -------PRODUCT DETAILS------- -->
             <section class="container px-3 card__block">
                 <div class="row justify-content-between">
-                    <div class="message__container"></div>
-                    <div class="spinner-border" role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
                     <div class="col-md mb-5 product__card p-0">
+                        <div class="message__container"></div>
+                        <div class="loading"></div>
                     </div>
                 </div>
             </section>
