--- a/products.html
+++ b/products.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +15,7 @@
     </head>
     <body>
         <div class="wrapper" id="top">
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3 bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
             <nav aria-label="breadcrumb" class="px-3 pt-2">
@@ -32,20 +31,17 @@
             <!-- -------SEARCH PRODUCT------- -->
             <section class="container px-3 my-4">
                 <form class="search__form form-inline my-2 my-lg-0 d-flex align-items-start">
-                    <input class="form-control mr-sm-2 w-50 search__input" type="search" placeholder="Search products" aria-label="Search">
-                    <button class=" btn btn-outline-success my-2 my-sm-0 search__btn" type="submit">
+                    <input class="form-control mr-sm-2 w-50 search__input" type="search" placeholder="Search here..." aria-label="Search">
+                    <!-- <button class=" btn btn-outline-success my-2 my-sm-0 search__btn" type="submit">
                         Search
                         <i class="fas fa-search"></i>
-                    </button>
+                    </button> -->
                 </form>
             </section>
             <!-- CARD -->
             <section class="container px-3 card__block">
-                <div class="message__container"></div>
-                <div class="spinner-border" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                <div class="row justify-content-between products__container">
+                <div class="row justify-content-start products__container">
+                    <div class="loading"></div>
                 </div>
             </section>
             <!-- -------TO TOP------- -->
