--- a/profilepage.html
+++ b/profilepage.html
@@ -4,7 +4,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
         <script src="https://kit.fontawesome.com/1bb4774137.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,30 +11,27 @@
         <meta name="description" content="Your profile at Sneaks gives you access to exclusive deals, pre-sales and much more!" />
         <meta name="author" content="MJ" />
         <link href="./css/style.css" rel="stylesheet" />
-        <title>Sneaks | Your Profile</title>
+        <title>Sneaks | Admin Profile</title>
     </head>
     <body>
         <div class="wrapper" id="top">
             <!-- -------NAVBAR------- -->
-            <nav class="navbar navbar-expand-lg navbar-light navbar__container px-3">
+            <nav class="navbar navbar-expand-lg navbar-light navbar__container bg-white pt-3 px-3">
             </nav>
             <!-- -------BREADCRUMB------- -->
-            <nav aria-label="breadcrumb" class="px-3">
+            <nav aria-label="breadcrumb" class="px-3 pt-2">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Profile page</li>
+                    <li class="breadcrumb-item active" aria-current="page">Admin page</li>
                 </ol>
             </nav>
             <!-- -------SITE HEADER------- -->
-            <section class="container username">
+            <section class="container username px-3">
                 <!-- <h1>HELLO NAME</h1> -->
             </section>
             <!-- -------MENU------- -->
             <section class="container">
-                <div class="list-group profile__menu shadow-sm p-3 mb-5 bg-white rounded profile__menu">
-                    <a href="index.html" class="list-group-item"><i class="fas fa-sign-out-alt"></i>Logout</a>
-                    <a href="addproduct.html" class="list-group-item"><i class="fas fa-plus"></i>Add product</a>
-                    <a href="listofproducts.html" class="list-group-item"><i class="fas fa-edit"></i>Edit product</a>
+                <div class="list-group shadow-sm p-3 mb-5 mt-3 bg-white profile__menu rounded-0">
                 </div>
             </section>
             <!-- -------TO TOP------- -->
